chore:添加项目结构

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,6 +5,8 @@
     <title>talk_something</title>
 </head>
 <body>
-<div id="app">fff</div>
+<div style="width: 70vw;height: 50px;  position: absolute;z-index:2049;-webkit-app-region: drag;"
+          id="basic_navbar"></div>
+<div id="app">ffddf</div>
 </body>
 </html>
