chore:增加路由，首页

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,8 +5,6 @@
     <title>talk_something</title>
 </head>
 <body>
-<div style="width: 70vw;height: 50px;  position: absolute;z-index:2049;-webkit-app-region: drag;"
-          id="basic_navbar"></div>
-<div id="app">ffddf</div>
+    <div id="app"></div>
 </body>
 </html>
